--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
+    "chart.js": "^4.4.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.13.2",
     "tslib": "^2.3.0",
