--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "^17.3.12",
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.13.2",
+    "swiper": "^11.1.14",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
@@ -31,7 +33,9 @@
     "@angular-devkit/build-angular": "^17.3.9",
     "@angular/cli": "^17.3.9",
     "@angular/compiler-cli": "^17.3.12",
+    "@types/gsap": "^3.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.31",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
