--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
     "chart.js": "^4.4.4",
+    "chartjs-chart-geo": "^4.3.2",
     "chartjs-plugin-datalabels": "^2.2.0",
     "jquery": "^3.7.1",
+    "ngx-papaparse": "^8.0.0",
+    "papaparse": "^5.4.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.13.2",
     "swiper": "^11.1.14",
@@ -36,6 +39,7 @@
     "@types/gsap": "^3.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.31",
+    "@types/papaparse": "^5.3.14",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
